<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:paddingTop="30dp"


    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="80dp"

        android:text="@string/cosas_que_puedes_controlar"
        android:textColor="@color/btnFuerte"
        android:fontFamily="@font/brillantest"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:text="@string/tu_rutina_de_suenio"
        android:textColor="@color/cafecito"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/como_te_tratas_a_ti_mismo"
        android:textColor="@color/cafecito"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/la_informacion_que_ves_escuchas"
        android:textColor="@color/cafecito"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/lo_que_comes"
        android:textColor="@color/cafecito"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/tu_mentalidad"
        android:textColor="@color/cafecito"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/la_forma_en_la_que_tratas_a_otros"
        android:textColor="@color/cafecito"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tu_nivel_de_honestidad"
        android:textColor="@color/cafecito"
        android:textStyle="bold"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/txt9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/la_informacion_que_ves_escuchas"
        android:textColor="@color/cafecito"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tu_vision_de_la_vida"
        android:textColor="@color/cafecito"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/que_tan_rapido_te_levantas_luego_de_caer"
        android:textColor="@color/cafecito"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:elevation="7dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/btnFuerte"
        app:cornerRadius="40dp"

        android:text="@string/btn_Continuar"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="230dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/solecito" />

    </RelativeLayout>

</LinearLayout>