<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/fondo"
    tools:context=".InicioSesionActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/titulos"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_nombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/nombre_de_usuario"
        android:inputType="text"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/correo_elecetronico"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/edit_contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/btnFuerte"
        android:text="@string/btn_acceder"
        android:textColor="@color/black"
        app:cornerRadius="40dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="115dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="117dp"
        app:srcCompat="@drawable/solecito" />

</LinearLayout>