<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context=".usuario">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-45dp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/nombre_usuario"
        android:textColor="@color/titulos"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/usuario"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnRecordatorios"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/btnFuerte"
        android:textSize="15sp"
        android:text="@string/recordatorios"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnMetas"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/btnFuerte"
        android:textSize="15sp"
        android:text="@string/metas"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btnAjustes"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/btnFuerte"
        android:textSize="15sp"
        android:text="@string/ajustes"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btnAyuda"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/btnFuerte"
        android:textSize="15sp"
        android:text="@string/ayuda"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/btnFuerte"
        android:textSize="15sp"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/textviewFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:text="@string/titulo"
        android:textSize="30sp"
        android:textColor="@color/titulos"/>
</LinearLayout>