<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/fondo"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/registrate"
        android:textStyle="bold"
        android:textColor="@color/titulos"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_nombreNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/nombre_de_usuario"
        android:textStyle="italic"
        android:textColorHint="@color/cafecito"
        android:textColorHighlight="@color/cafecito"
        android:inputType="text"

        android:textColor="@color/titulos"/>

    <EditText
        android:id="@+id/edit_emailNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/correo_elecetronico"
        android:textStyle="italic"
        android:textColorHint="@color/cafecito"
        android:textColorHighlight="@color/cafecito"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:textColor="@color/titulos"/>

    <EditText
        android:id="@+id/edit_contraNueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/contrasenia"
        android:textColorHint="@color/cafecito"
        android:textColorHighlight="@color/cafecito"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:textColor="@color/titulos"/>

    <EditText
        android:id="@+id/edit_contraConfNueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="italic"
        android:hint="@string/confirmar_contrasenia"
        android:textColorHint="@color/cafecito"
        android:textColorHighlight="@color/cafecito"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:textColor="@color/titulos"/>

    <CheckBox
        android:id="@+id/check_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_marginTop="15dp"
        android:textStyle="italic"
        android:textColor="@color/titulos"/>

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        app:cornerRadius="40dp"
        android:backgroundTint="@color/btnFuerte"
        android:text="@string/btn_registrarse"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="115dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/solecito" />
    </LinearLayout>

</LinearLayout>