<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context=".RitualMatutinoActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageViewRecomendaciones"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:scaleType="centerCrop"
            android:src="@drawable/recomendaciones"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/navegar"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/ic_baseline_navigate_before_24"
            app:tint="@color/btnClaro" />

            <TextView
                android:id="@+id/titulo"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/ritual_matutino"
                android:textColor="@color/btnClaro"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHabitos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:id="@+id/textviewHabitos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:text="@string/habitos"
            android:textSize="25sp"
            android:textColor="@color/titulos"/>
        <TextView
            android:id="@+id/textviewHoy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hoy"
            android:textColor="@color/titulos"
            android:textSize="17sp"/>

    </LinearLayout>

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <TableRow
            android:id="@+id/tablerow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageviewAgua"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_gota_de_agua"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textviewBeberAgua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/beber_agua"
                android:textSize="17sp"
                android:textColor="@color/titulos"/>

            <EditText
                android:id="@+id/txtCantidadAgua"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:gravity="center"
                android:hint="@string/cantidadEj"
                android:inputType="number"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/lbMin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cantidad"
                android:textColor="@color/titulos"
                android:textSize="17sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tablerow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageviewCorrer"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_silueta_de_corredor_corriendo_rapido"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textviewCorrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/salir_a_correr"
                android:textSize="17sp"
                android:textColor="@color/titulos"/>

            <EditText
                android:id="@+id/txtTiempoCorrer"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="25dp"
                android:hint="@string/tiempoEj"
                android:textStyle="italic"
                android:inputType="number"/>

            <TextView
                android:id="@+id/lbTiempo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tiempo"
                android:textColor="@color/titulos"
                android:textSize="17sp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnGuardarObjetivos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:elevation="5dp"
        android:backgroundTint="@color/btnFuerte"
        android:text="@string/objetivo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="40dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/sol3" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>