<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context=".AgregarMeta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/navegar"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_baseline_navigate_before_24" />

        <TextView
            android:id="@+id/view_titulo"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:text="@string/nueva_Meta"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/titulos"
            android:textSize="30sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_ContenidoMeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/contenido_Meta"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textColorHint="@color/cafecito"
        android:inputType="text"
        android:textColor="@color/titulos"/>


    <Button
        android:id="@+id/btnGuardarMeta"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/btnFuerte"
        android:text="@string/btn_guardar_meta"
        android:elevation="5dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="40dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/sol4"
                android:contentDescription="@string/todo" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>